<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Noknok</string>
    <string name="login">Login</string>
    <string name="facebook_lo">facebook  login</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your">Forget your password?</string>
    <string name="login_2">Login</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="dont_have_a">Dont have an account?</string>
    <string name="dishes">Dishes</string>
    <string name="cooks">Cooks</string>
    <string name="title_activity_dish_display">DishDisplay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_your_">enter your location</string>
    <string name="view_dish">View Dish</string>
    <string name="date">Date</string>
    <string name="menu">Menu</string>
    <string name="fav">Favs</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="register">Register</string>
    <string name="facebook_wi">Register with facebook</string>
    <string name="username">Username</string>
    <string name="mobile_numb">Mobile Number</string>
    <string name="emailid">Email ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_clicking">By clicking submit, I agree to NOKNOK\'s Terms of Service and Privacy Policy</string>
    <string name="filter">Filter</string>
    <string name="favourites">Favourites</string>
    <string name="availability">Available from</string>
    <string name="order_time">Order by</string>
    <string name="Your_cart">Your cart</string>
    <string name="check_out">Continue to check out</string>
    <string name="cancel">Cancel Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="cuisine">Cuisine</string>
    <string name="speciality">Speciality</string>
    <string name="location">Location</string>
    <string name="open">Open</string>
    <string name="colon">:</string>
    <string name="ppd">Price per dishes</string>
    <string name="available">Food available between</string>
    <string name="portion">Portion</string>
    <string name="rcpname">Recipe Name</string>
    <string name="fourppl">(minimum 4 people or above)</string>
    <string name="upload_image">upload image</string>
    <string name="view_profile">view profile</string>
    <string name="cook_profile_number">64</string>
    <string name="rating">43.5(123)</string>
    <string name="sold">Dish Sold</string>
    <string name="dish_request">Request for any special dishes</string>
    <string name="request">Request</string>
    <string name="scheduled_dishes">Scheduled Dishes</string>
    <string name="request_rule">required 4 portions minimum for all special request</string>
    <string name="like">Like</string>
    <string name="sell">Sold</string>
    <string name="rate">Rate</string>
    <string name="ratings">Ratings</string>
    <string name="review">I like very much food bla bla bla bla and also like food bla bla , i want to make food bla bla bla , and also want you to eat my my food bla bla bla , cholet thakbe till bla bla</string>
    <string name="request_acceptance">You can order from your cart  <br /><br />when the requests is confirmed</string>
    <string name="order_acceptance">You will be notified when the  <br /><br />order is confirmed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_checklist">Checklist</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="signature_dishes">Signature Dishes</string>
    <string name="active_signature_items">Active signature items</string>
    <string name="active_schedule_items">Active schedule items</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_payment_history"><![CDATA[Order & Payment History]]></string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="edit">Edit</string>
    <string name="order_payment_history"><![CDATA[Order & Payment History]]></string>
</resources>