<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="@font/roboto_regular"
        android:textFontWeight="400"
        android:lineHeight="25sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="45dp"
        android:text="Food Available between"
        android:textAppearance="@style/account_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:textFontWeight="300"
        android:lineHeight="25sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="14dp"
        android:text="12:00 AM - 11:45 PM"
        android:textAppearance="@style/filter_attribute"
        />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>