<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:gravity="bottom"
    android:layout_gravity="bottom">
    <LinearLayout
        android:layout_marginLeft="41dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_icon"
            />
        <TextView
            android:textFontWeight="300"
            android:lineHeight="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textAppearance="@style/footer_font"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="41dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love"
            />
        <TextView
            android:textFontWeight="300"
            android:lineHeight="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav"
            android:textAppearance="@style/footer_font"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="41dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            />
        <TextView
            android:textFontWeight="300"
            android:lineHeight="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAppearance="@style/footer_font"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="41dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/cart"
            android:layout_height="wrap_content"
            />
        <TextView
            android:textFontWeight="300"
            android:lineHeight="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textAppearance="@style/footer_font"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="41dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/icons8_user"
            android:layout_height="wrap_content"
            />
        <TextView
            android:textFontWeight="300"
            android:lineHeight="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAppearance="@style/footer_font"/>
    </LinearLayout>
</LinearLayout>