<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:elevation="5dp">

    <View
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="300dp"
        android:background="@drawable/group_84"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:lineHeight="24sp"
        android:text="@string/login"
        android:textAppearance="@style/login"
        android:textFontWeight="400"
        tools:ignore="DuplicateIds" />

    <View
        android:layout_width="193dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="19dp"
        android:background="@drawable/ic_line_16"/>

    <EditText
        android:id="@+id/editTextTextCookEmailID"
        android:layout_width="270dp"
        android:textFontWeight="300"
        android:lineHeight="14sp"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_rectangle_287"
        android:layout_gravity="center"
        android:paddingLeft="12dp"
        android:text="@string/emailid"
        android:textColor="#5E5D5D"
        android:textAppearance="@style/login_register_edittext"
        android:fontFamily="@font/roboto_regular"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextCookPassword"
        android:layout_width="270dp"
        android:textFontWeight="300"
        android:lineHeight="14sp"
        android:background="@drawable/ic_rectangle_287"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:paddingLeft="12dp"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textColor="#5E5D5D"
        android:textAppearance="@style/login_register_edittext"
        android:fontFamily="@font/roboto_regular"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="15dp"
        android:layout_marginTop="18dp"
        android:id="@id/forget_your"
        android:layout_marginLeft="180dp"
        android:textFontWeight="400"
        android:ems="20"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/forget_your"
        android:textAppearance="@style/forget_your"
        android:lineHeight="12sp"/>

    <Button
        android:id="@+id/cook_login"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_rectangle_284"
        android:text="Login"
        android:textAppearance="@style/login_3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="162dp"
            android:layout_height="25dp"
            android:id="@+id/dont_have_a"
            android:fontFamily="@font/roboto_regular"
            android:textFontWeight="400"
            android:lineHeight="12sp"
            android:layout_marginLeft="7dp"
            android:text="@string/dont_have_a"
            android:textAppearance="@style/dont_have_a"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:id="@+id/sign_up_here"
            android:fontFamily="@font/roboto_regular"
            android:textFontWeight="500"
            android:lineHeight="13sp"
            android:text="@string/sign_up_here"
            android:textAppearance="@style/sign_up_here"
            />
    </LinearLayout>
</LinearLayout>