<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favourites"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/rcpname"
            android:textAppearance="@style/request_titles"
            android:layout_weight="400"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="95dp"
            android:layout_marginStart="27dp" />

        <EditText
            android:layout_width="323dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="27dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/ic_rectangle_346"
            android:layout_marginStart="27dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/portion"
            android:textAppearance="@style/request_titles"
            android:layout_weight="400"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="40dp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="27dp"
            android:background="@drawable/ic_rectangle_346"
            android:textFontWeight="300"
            android:text="@string/fourppl"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/request_edittext_title"
            tools:targetApi="p"
            android:autofillHints=""
            android:textColor="#A6A6A6"
            android:ems="10"
            tools:ignore="LabelFor"
            android:layout_marginStart="27dp" />

    </LinearLayout>
</ScrollView>