<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="cook  name"
        android:textAppearance="@style/cook_name"
        android:textFontWeight="400"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile3"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuisine"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"
                android:textColor="@color/display_title_description"/>
            <TextView
                android:textColor="@color/display_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality"
                android:textAppearance="@style/cook_description"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:textFontWeight="500"/>
            <TextView
                android:textColor="@color/display_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginBottom="13dp"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"/>
            <TextView
                android:textColor="@color/display_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"/>
            <TextView
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:layout_marginBottom="13dp"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Indian, Bengali"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"
                android:textColor="@color/cart_description"/>
            <TextView
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cake, pastry"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"
                android:textColor="@color/cart_description"/>
            <TextView
                android:layout_marginBottom="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agrabad,Chattogram"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"
                android:textColor="@color/cart_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6.00 pm - 8.00 am"
                android:textAppearance="@style/cook_description"
                android:textFontWeight="500"
                android:textColor="@color/cart_description"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>